# pkg/client/openapi.yaml
@@ -3249,6 +3249,17 @@ paths:
               - "false"
               - ""
             type: string
+        - description: Filter by review verdict
+          explode: false
+          in: query
+          name: verdict
+          schema:
+            description: Filter by review verdict
+            enum:
+              - pass
+              - fail
+              - ""
+            type: string
         - description: Filter by job type
           explode: false
           in: query
